// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="postMetaInline "
>
  <time
    dateTime={null}
  >
    Invalid date
  </time>
  <span
    className="middotDivider"
  />
  <span
    className="readingTime"
    title="5 mins"
  />
</div>
`;

exports[`renders correctly when is small 1`] = `
<div
  className="postMetaInline small"
>
  <time
    dateTime={null}
  >
    Invalid date
  </time>
  <span
    className="middotDivider"
  />
  <span
    className="readingTime"
    title="5 mins"
  />
</div>
`;
